--- a/conda/py311_LRP.yaml
+++ b/conda/py311_LRP.yaml
@@ -27,6 +27,8 @@ dependencies:
     - cartopy
     - cmocean
     - pyresample
+# Typing hints
+    - beartype
 # for other packages
     - cachetools
     - fsspec
