Adding jaxtyping for better typing hints for arrays. Contrary to what the name suggests, it is a generic-use package and has no Jax dependencies.

--- a/conda/py310_LRP.yaml
+++ b/conda/py310_LRP.yaml
@@ -29,6 +29,7 @@ dependencies:
     - pyresample
 # Typing hints
     - beartype
+    - jaxtyping
 # for other packages
     - cachetools
     - fsspec
